--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ toml = "0.9.7"
 blake3 = "1.8.2"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 regex = "1.11.3"
+tikv-jemallocator = "0.6"
 
 # SQL task dependencies
 rsql_drivers = "0.19.2"
@@ -31,24 +32,29 @@ axum = "0.8.6"
 tower = "0.5.2"
 
 # Agent-specific dependencies
-reqwest = { version = "0.12.23", features = ["json", "stream"] }
+reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls-native-roots"], default-features = false }
 hickory-resolver = "0.25.2"
 socket2 = "0.6.0"
 url = "2.5.7"
 hickory-client = "0.25.2"
-openssl = { version = "0.10.73"}
-tokio-openssl = "0.6.5"
+rustls = { version = "0.23", features = ["aws-lc-rs"] }
+tokio-rustls = "0.26"
+rustls-native-certs = "0.8"
+rustls-pemfile = "2.2"
+webpki-roots = "1.0"
+webpki = "0.22"
+x509-parser = "0.18"
 ping-async = "1.0.1"
 clap = { version = "4.5", features = ["derive"] }
-rand = "0.8"
+rand = "0.9.2"
 futures-util = "0.3.30"
 
 [workspace.package]
-version = "0.5.0"
+version = "0.6.0"
 edition = "2021"
 license = "MIT License"
 authors = ["Maciej Wilamowski - Sycope"]
-repository = "https://github.com/your-org/networker"
+repository = "https://github.com/macwilam/linksense"
 description = "Network Health and Performance Monitoring System"
 
 # Workspace-level settings for consistent builds
