--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -35,6 +35,7 @@ tracing-appender.workspace = true
 base64.workspace = true
 flate2.workspace = true
 chrono.workspace = true
+tikv-jemallocator.workspace = true
 
 # Agent-specific dependencies
 reqwest.workspace = true
@@ -42,8 +43,13 @@ hickory-resolver.workspace = true
 socket2.workspace = true
 url.workspace = true
 hickory-client.workspace = true
-openssl.workspace = true
-tokio-openssl.workspace = true
+rustls.workspace = true
+tokio-rustls.workspace = true
+rustls-native-certs.workspace = true
+rustls-pemfile.workspace = true
+webpki-roots.workspace = true
+webpki.workspace = true
+x509-parser.workspace = true
 ping-async.workspace = true
 clap.workspace = true
 rand.workspace = true
