--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -34,6 +34,7 @@ tracing-appender.workspace = true
 base64.workspace = true
 flate2.workspace = true
 chrono.workspace = true
+tikv-jemallocator.workspace = true
 
 # Server-specific dependencies
 axum.workspace = true
