Minor bugfix in tas kdns where aggregation was not correct when multiple ips returned. Added readme for task snmp. Slight tweaks in task_snmp.

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [features]
 default = []
 sql-tasks = ["dep:rsql_drivers", "dep:rsql_driver", "shared/sql-tasks"]
+snmp-tasks = ["dep:snmp2", "shared/snmp-tasks"]
 
 [dependencies]
 # Shared crate
@@ -43,7 +44,7 @@ hickory-resolver.workspace = true
 socket2.workspace = true
 url.workspace = true
 hickory-client.workspace = true
-snmp2.workspace = true
+snmp2 = { version = "0.4", features = ["tokio", "v3"], optional = true }
 rustls.workspace = true
 tokio-rustls.workspace = true
 rustls-native-certs.workspace = true
