--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 [features]
 default = []
 sql-tasks = ["shared/sql-tasks"]
+snmp-tasks = ["shared/snmp-tasks"]
 
 [dependencies]
 # Shared crate
