Improved the code responsible for config watching and updating on server side to avoid multiple unecessary reands and mutex locking while reading. Removed some dead code. Moved code related only to tests to separate module in tests. Thanks to consistent-milk12 for spotting those problems / inefficiencies.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,6 +43,7 @@ tower.workspace = true
 clap.workspace = true
 subtle.workspace = true
 futures-util.workspace = true
+notify.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
