--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,10 @@ ping-async = "1.0.1"
 clap = { version = "4.5", features = ["derive"] }
 rand = "0.9.2"
 futures-util = "0.3.30"
+notify = { version = "8.0", default-features = false, features = ["macos_fsevent"] }
 
 [workspace.package]
-version = "0.8.4"
+version = "0.8.5"
 edition = "2021"
 license = "MIT License"
 authors = ["Maciej Wilamowski - Sycope"]
