Small improvements for release building

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,14 +62,14 @@ jobs:
 
           # macOS x86_64
           - target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-15
             use_cross: false
             variant: regular
             features: ""
 
           # macOS ARM64 (M1/M2/M3/M4)
           - target: aarch64-apple-darwin
-            os: macos-14
+            os: macos-15
             use_cross: false
             variant: regular
             features: ""
@@ -120,24 +120,21 @@ jobs:
 
           # macOS x86_64
           - target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-15
             use_cross: false
             variant: full
             features: "sql-tasks,snmp-tasks"
 
           # macOS ARM64 (M1/M2/M3/M4)
           - target: aarch64-apple-darwin
-            os: macos-14
+            os: macos-15
             use_cross: false
             variant: full
             features: "sql-tasks,snmp-tasks"
 
-          # Windows x86_64 (MSVC)
-          - target: x86_64-pc-windows-msvc
-            os: windows-latest
-            use_cross: false
-            variant: full
-            features: "sql-tasks,snmp-tasks"
+          # Note: Windows "full" variant is not available because SNMP requires OpenSSL
+          # which has complex build requirements on Windows MSVC. Use the regular
+          # Windows build or run on WSL/Linux for SNMP support.
 
     steps:
       - name: Checkout code
@@ -154,11 +151,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libssl-dev pkg-config
 
-      - name: Install OpenSSL (Windows)
-        if: runner.os == 'Windows' && matrix.variant == 'full'
+      - name: Install cross-compilation dependencies
+        if: matrix.use_cross && matrix.variant == 'full'
         run: |
-          echo "OPENSSL_DIR=C:\Program Files\OpenSSL" >> $env:GITHUB_ENV
-          choco install openssl -y
+          sudo apt-get update
+          sudo apt-get install -y perl make
 
       - name: Install cross (for cross-compilation)
         if: matrix.use_cross
