--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,17 +145,17 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install build dependencies for vendored OpenSSL (Linux)
-        if: runner.os == 'Linux' && matrix.variant == 'full'
+      - name: Install OpenSSL development packages (Linux native)
+        if: runner.os == 'Linux' && matrix.variant == 'full' && !matrix.use_cross
         run: |
           sudo apt-get update
-          sudo apt-get install -y perl make pkg-config
+          sudo apt-get install -y libssl-dev pkg-config
 
-      - name: Install build dependencies for vendored OpenSSL (macOS)
+      - name: Install OpenSSL (macOS)
         if: runner.os == 'macOS' && matrix.variant == 'full'
         run: |
-          # macOS has perl and make by default, but ensure they're available
-          which perl && which make
+          brew install openssl@3
+          echo "OPENSSL_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
 
       - name: Install cross (for cross-compilation)
         if: matrix.use_cross
@@ -187,9 +187,6 @@ jobs:
       - name: Build agent with features (native)
         if: ${{ !matrix.use_cross && matrix.features != '' }}
         run: cargo build --release --target ${{ matrix.target }} --bin agent --features "${{ matrix.features }}"
-        env:
-          # Force vendored OpenSSL to compile from source instead of using pkg-config
-          OPENSSL_NO_PKG_CONFIG: "1"
 
       - name: Build agent (cross)
         if: ${{ matrix.use_cross && matrix.features == '' }}
@@ -198,9 +195,6 @@ jobs:
       - name: Build agent with features (cross)
         if: ${{ matrix.use_cross && matrix.features != '' }}
         run: cross build --release --target ${{ matrix.target }} --bin agent --features "${{ matrix.features }}"
-        env:
-          # Force vendored OpenSSL - this is passed to cross container via Cross.toml
-          OPENSSL_NO_PKG_CONFIG: "1"
 
       # Build server (always without features - server supports all metric types unconditionally)
       - name: Build server (native)
